Update DarkLatexPuddleFeatureProcedure.java